# auth2.0

./: README.md  pyproject.toml
app/: alembic.ini  db.sqlite3  items_views.py  main.py
app/alembic/: env.py
app/alembic/versions/: 08f20226063a_create_posts_table.py  0e393045fbd8_initial_migration.py  51279fc2d243_create_posts_table.py  6980c32818e0_initial_migration.py  71e691f0528e_create_profile_table.py  928375b45e9c_initial_migration.py
app/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  mixin.py  post.py  product.py  profile.py  user.py
app/users/: crud.py  views.py
